# mobot

./: Cargo.toml
src/lib/: client.rs  fake.rs  router.rs
src/lib/api/: chat.rs  message.rs  photo_size.rs
