[package]
name = "mobot"
description = "A Telegram framework for Rust"
homepage = "https://github.com/0xfe/mobot"
repository = "https://github.com/0xfe/mobot"
readme = "README.md"
version = "0.4.2"
edition = "2024"
license = "MIT"

[lib]
name = "mobot"
path = "src/lib/lib.rs"

[dependencies]
argh = "0.1.19"
env_logger = "0.11.11"
log = "0.4.33"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
lazy_static = "1.4"
rand = "0.10.2"
reqwest = {version = "0.13.4", features = ["json"]}
anyhow = "1.0.104"
thiserror = "2.0.19"
derive_more = {version = "2.1.1", features = ["full"]}
futures = "0.3.33"
async-trait = "0.1.91"
chrono = "0.4.41"
regex = "1.13.1"
mobot-derive = { version = "0.1.0", path = "mobot-derive" }
bytes = "1.12.1"
